Migrate to React and fix z-index/mobile bugs

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,13 @@
+html, body, #root {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 .App {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
